--- a/.github/workflows/detailappdeploy.yml
+++ b/.github/workflows/detailappdeploy.yml
@@ -15,7 +15,7 @@ name: App Deploy details - GitOps
 on: 
   push:
     branches:
-      - main
+      - master
     paths:
       - 'bookinfo/src/details/**'
 
