--- a/.github/workflows/productpagedeploy.yml
+++ b/.github/workflows/productpagedeploy.yml
@@ -15,7 +15,7 @@ name: App Deploy productpage - GitOps
 on: 
   push:
     branches:
-      - main
+      - master
     paths:
       - 'bookinfo/src/productpage/**'
 
